Padding over margin for avoiding page content jump

--- a/src/css/ui/page-layout.css
+++ b/src/css/ui/page-layout.css
@@ -343,10 +343,6 @@
     --c-width_sidebar: var(--c-width_sidebar_regular);
   }
 
-  .page.sidebar-toggled .page-content {
-    margin-left: var(--c-width_sidebar_narrow);
-  }
-
   .page.sidebar-toggled #main-sidebar {
     position: absolute;
   }
@@ -391,6 +387,10 @@
     padding: 0;
   }
 
+  .page.sidebar-edge-to-edge-layout.sidebar-toggled .page-content {
+    padding-left: var(--c-width_sidebar_narrow);
+  }
+
   .page.sidebar-left-content-layout .page-content .columns {
     width: initial;
   }
@@ -432,7 +432,7 @@
   }
 
   .page.sidebar-toggled .page-content {
-    margin-left: 0;
+    padding: 0;
   }
 }
 
